<resources>
    <string name="app_name">Rentalapp</string>
    <string name="propify">Propify</string>
    <string name="this_is_the_logo_of_propify_app">This is the logo of Propify App</string>
    <string name="get_started">Get Started</string>
    <string name="your_gateway_to_exceptional_spaces">Your Gateway to Exceptional Spaces!</string>
    <string name="title_activity_users">Users</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="title_activity_multi_users">multi_users</string>
    <string name="select_role">Select Role</string>
    <string name="renter">Renter</string>
    <string name="property_owner">Property Owner</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="property_owners">Property Owners</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="select_user">Select User</string>
    <string name="new_user">New User</string>
    <string name="existing_user">Existing User</string>
    <string name="create_user_account">Create User Account</string>
    <string name="sign_up">Sign Up</string>
    <string name="full_name">Full Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="register">Register</string>
    <string name="renters">Renters</string>
    <string name="register_person_img">Register_person_img</string>
    <string name="user">User</string>
    <string name="user_gmail_com">user@gmail.com</string>
    <string name="sign_out">Sign out</string>

    <string name="continue_btn">Continue</string>
    <string name="home">Home</string>
    <string name="add_rental_space_here">Add Rental Space Here</string>
    <string name="property_title">Property Title</string>
    <string name="add_your_space">Add your space</string>
    <string name="number_of_bedrooms">Number of Bedrooms</string>
    <string name="number_of_bathrooms">Number of Bathrooms</string>
    <string name="monthly_rent">Monthly Rent</string>
    <string name="location">Location</string>
    <string name="contact_number">Contact Number</string>
    <string name="submit">Submit</string>
    <string name="my_listings">My Listings</string>
    <string name="properties_for_rent">Properties for Rent</string>
    <string name="price_in_usd">Price in USD</string>
    <string name="rent_price">Rent Price</string>
    <string name="rent_monthly">Rent Monthly</string>
    <string name="your_request_for_rental_property_has_been_sent_nteam_will_contact_soon">Your Request For Rental property has been Sent.\nTeam Will contact Soon</string>
    <string name="ok">OK</string>
    <string-array name="property_types">
        <item>Apartment</item>
        <item>House</item>
        <item>Condominium</item>
        <item>Duplex</item>
        <item>Studio</item>
        <item>Land/Plot</item>
        <item>Bungalow</item>
        <item>Flat</item>
        <item>Villa</item>
    </string-array>



    <!-- Array for City options -->
    <string-array name="city_options">
        <item>Select City</item>
        <item>Dubai</item>
        <item>Sharjah</item>
        <item>London</item>
        <item>Mumbai</item>
        <item>Kolkata</item>
        <item>Lahore</item>
        <item>Sialkot</item>
        <item>Islamabad</item>



        <!-- Add more cities as needed -->
    </string-array>
    <!-- Array for Rent Price options -->
    <string-array name="rent_price_options">
        <item>Select Rent Price</item>
        <item>Up to $500</item>
        <item>$500 - $1000</item>
        <item>$1000 - $1500</item>
        <item>$5000 - $10000</item>
        <item>$10000+</item>
        <!-- Add more price ranges as needed -->
    </string-array>
</resources>