<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/black">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_your_space"
                android:textSize="40sp"
                android:textColor="@color/white"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="16dp"/>

            <EditText
                android:id="@+id/propertyTitleEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/property_title"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:background="@drawable/custom_edit_text"
                android:padding="12dp"
                android:inputType="text"
                tools:ignore="Autofill" />

            <Spinner
                android:id="@+id/propertyTypeSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/custom_spinner_background"
                android:spinnerMode="dropdown"
                tools:ignore="TouchTargetSizeCheck" />

            <EditText
                android:id="@+id/numBedroomsEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/number_of_bedrooms"
                android:inputType="number"
                android:background="@drawable/custom_edit_text"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:padding="12dp"
                tools:ignore="Autofill" />

            <EditText
                android:id="@+id/numBathroomsEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/number_of_bathrooms"
                android:inputType="number"
                android:background="@drawable/custom_edit_text"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:padding="12dp"
                tools:ignore="Autofill" />

            <EditText
                android:id="@+id/monthlyRentEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/monthly_rent"
                android:inputType="numberDecimal"
                android:background="@drawable/custom_edit_text"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:padding="12dp"
                android:autofillHints="" />

            <EditText
                android:id="@+id/locationEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/location"
                android:inputType="text"
                android:background="@drawable/custom_edit_text"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:padding="12dp"
                android:autofillHints="" />

            <EditText
                android:id="@+id/contactNumberEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/contact_number"
                android:inputType="phone"
                android:background="@drawable/custom_edit_text"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:padding="12dp"
                android:autofillHints="" />

            <Button
                android:id="@+id/submitBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/submit"
                android:background="@drawable/custom_button"
                android:textColor="@color/white"
                android:padding="12dp"/>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
