<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:background="@drawable/background_with_shadow">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_top_corners"
        android:orientation="vertical"
        android:padding="16dp"
        android:clipToPadding="true"
        android:elevation="6dp">

        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@android:color/holo_blue_light"
            android:text="@string/property_title" />

        <TextView
            android:id="@+id/locationInfoTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@android:color/darker_gray"
            android:text="@string/location" />

        <TextView
            android:id="@+id/rentInfoTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@android:color/holo_green_light"
            android:text="@string/rent_monthly" />

    </LinearLayout>
</FrameLayout>
